Bug 1628690 [Wayland][VA-API] Respect disabled HW decoding to allow fallback to SW decoding, r=jya

Differential Revision: https://phabricator.services.mozilla.com/D71158